git ignore udates

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ node_modules
 .sass-cache
 
 .metadata
+bin/
 tmp/
 *.tmp
 *.bak
@@ -33,6 +34,7 @@ local.properties
 .recommenders
 
 # Eclipse Core
+.project
 
 # External tool builders
 .externalToolBuilders/
@@ -46,10 +48,14 @@ local.properties
 # CDT-specific (C/C++ Development Tooling)
 .cproject
 
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
 # Java annotation processor (APT)
 .factorypath
 
+# PDT-specific (PHP Development Tools)
+.buildpath
 
 # sbteclipse plugin
 .target
