--- a/C4Framework/bin/.classpath
+++ b/C4Framework/bin/.classpath
@@ -33,6 +33,8 @@
 	<classpathentry kind="lib" path="../C4Framework/dependencies/core-1.0.0.jar"/>
 	<classpathentry kind="lib" path="../C4Framework/dependencies/gson-2.7.jar"/>
 	<classpathentry kind="lib" path="../C4Framework/dependencies/commons-csv-1.1.jar"/>
+	<classpathentry kind="lib" path="dependencies/ArcticSunDogLibrary.jar"/>
+	<classpathentry kind="lib" path="dependencies/java-json.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
